--- a/ambilight/Makefile
+++ b/ambilight/Makefile
@@ -1,7 +1,7 @@
 # Ambilight Project
 # Console application
 #
-# Copyright: (c) 2010 by Karol Maciaszek
+# Copyright: (c) 2010-2011 by Karol Maciaszek
 # E-mail   : <karol.maciaszek@gmail.com>
 # WWW      : http://www.czystybeton.pl/
 #
